force-app/main/default/objects/Usage__c/fields/Usage_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Usage_Subscription__c</fullName>
    <label>Usage Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Usages</relationshipLabel>
    <relationshipName>Usage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>