force-app/main/default/objects/Usage__c/fields/UsageAmount__c.field-meta.xml
<CustomField>
    <fullName>UsageAmount__c</fullName>
    <label>UsageAmount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>