force-app/main/default/objects/Usage__c/fields/UsageMonth__c.field-meta.xml
<CustomField>
    <fullName>UsageMonth__c</fullName>
    <label>UsageMonth</label>
    <type>Date</type>
</CustomField>